responsive form section

--- a/index.html
+++ b/index.html
@@ -451,8 +451,8 @@
             </div>
            <div class="">
              <div class="flex flex-col gap-6 lg:flex-row mt-8 lg:mt-12">
-                <div class="card flex flex-col gap-10 border border-[#1313181A] rounded-xl p-12 ">
-                    <div class="card w-96 bg-[#BCED6D1A] text-primary-content">
+                <div class="card flex flex-col gap-10 border border-[#1313181A] rounded-xl p-4 lg:p-12 ">
+                    <div class="card  bg-[#BCED6D1A] text-primary-content">
                        <div class="card-body ">
                          <img src="./Images/Group 1171275317.png" class="w-[48px]" alt="">
                          <p class="text-primary-p ">Phone Number : </p>
@@ -461,7 +461,7 @@
                        </div>
                     </div>
                   
-                    <div class="card w-96 bg-[#FDDD5F1A] text-primary-content">
+                    <div class="card  bg-[#FDDD5F1A] text-primary-content">
                        <div class="card-body ">
                          <img src="./Images/Group 1171275318.png" class="w-[48px]" alt="">
                          <p class="text-primary-p ">Email : </p>
@@ -470,7 +470,7 @@
                        </div>
                     </div>
                   
-                    <div class="card w-96 bg-[#BCED6D1A] text-primary-content">
+                    <div class="card  bg-[#BCED6D1A] text-primary-content">
                        <div class="card-body ">
                          <img src="./Images/Group 1171275321.png" class="w-[48px]" alt="">
                          <p class="text-primary-p ">Location: </p>
@@ -481,7 +481,7 @@
                    </div>
                 <div class="form flex-1 ">
                     <form action="">
-                        <div class="flex gap-6">
+                        <div class="flex flex-col lg:flex-row gap-3 lg:gap-6">
                            <div class="flex-1">
                                <label class="block text-xl font-bold " for="name">Your Name</label>
                                <input class="bg-[#13131808]  w-full my-4 py-4 pl-4 text-primary-p font-normal rounded-xl outline-none " type="text" placeholder="Enter Your Name">
@@ -491,7 +491,7 @@
                                <input class="bg-[#13131808] w-full my-4 py-4 pl-4 text-primary-p font-normal rounded-xl outline-none " type="text" type="email" placeholder="Enter Your Email">
                            </div>
                         </div>
-                        <div class="flex gap-6">
+                        <div class="flex flex-col lg:flex-row gap-3 lg:gap-6">
                            <div class="flex-1" >
                                <label class="block text-xl font-bold" for="name">Subject</label>
                                <input class="bg-[#13131808] w-full my-4 py-4 pl-4 text-primary-p font-normal rounded-xl outline-none " type="text" type="text" placeholder="Enter Your Subject">
@@ -525,5 +525,34 @@
         </div>
 
     </main>
+    <footer class="footer py-24 px-28 bg-[#131318] text-neutral-content">
+        <nav>
+          <header class="footer-title">Services</header> 
+          <a class="link link-hover">Branding</a>
+          <a class="link link-hover">Design</a>
+          <a class="link link-hover">Marketing</a>
+          <a class="link link-hover">Advertisement</a>
+        </nav> 
+        <nav>
+          <header class="footer-title">Company</header> 
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Contact</a>
+          <a class="link link-hover">Jobs</a>
+          <a class="link link-hover">Press kit</a>
+        </nav> 
+        <nav>
+          <header class="footer-title">Company</header> 
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Contact</a>
+          <a class="link link-hover">Jobs</a>
+          <a class="link link-hover">Press kit</a>
+        </nav> 
+        <nav>
+          <header class="footer-title">Legal</header> 
+          <a class="link link-hover">Terms of use</a>
+          <a class="link link-hover">Privacy policy</a>
+          <a class="link link-hover">Cookie policy</a>
+        </nav>
+      </footer>
 </body>
 </html>
