--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </div>
                   </div>
                 <div class="card  bg-base-100 ">
-                    <figure class="px-10 pt-1 lg:pt-10 lg:pt-10 relative ">
+                    <figure class="px-10 pt-1  lg:pt-10 relative ">
                         <img src="./Images/Group 9 (3).png" alt="">
                         <h1 class="absolute translate-x-0 text-2xl font-extrabold ">80%</h1>
                     </figure>
@@ -152,21 +152,21 @@
                 <p class="max-w-[600px] mx-auto text-center text-primary-des text-base font-medium">we are committed to enriching the hockey experience for fans, players, and enthusiasts alike</p>
             </div>
             <div class="grid gap-5 grid-cols-1 md:grid-cols-2 mt-8 text-white">
-                <div class="hero flex justify-start  rounded-2xl px-10 pt-28 pb-12 " style="  background:linear-gradient(180deg,rgba(19, 19, 24, 0.50),rgba(19, 19, 24, 0.50)), url(./Images/2.png); background-repeat: no-repeat; background-size: cover;">
+                <div class="hero flex justify-start  rounded-2xl px-3 pt-12 pb-3 lg:px-10 lg:pt-28 lg:pb-12 " style="  background:linear-gradient(180deg,rgba(19, 19, 24, 0.50),rgba(19, 19, 24, 0.50)), url(./Images/2.png); background-repeat: no-repeat; background-size: cover;">
                     <div class="lg:max-w-[495px]">
                         <h1 class="mb-5 text-3xl font-extrabold">Junior Program</h1>
                         <p class="mb-5 font-medium text-base">Our Junior Hockey Development Program is meticulously crafted to provide young players with a comprehensive and enjoyable introduction to the world of hockey.</p>
                         <button class="btn bg-[#FF4240] text-white text-xl font-bold outline-none border-none px-8">Register Now</button>
                       </div>
                 </div>
-                <div class="hero flex justify-start  rounded-2xl px-10 pt-28 pb-12 " style="  background:linear-gradient(180deg,rgba(19, 19, 24, 0.50),rgba(19, 19, 24, 0.50)), url(./Images/3.png); background-repeat: no-repeat; background-size: cover;">
+                <div class="hero flex justify-start  rounded-2xl px-3 pt-12 pb-3 lg:px-10 lg:pt-28 lg:pb-12 " style="  background:linear-gradient(180deg,rgba(19, 19, 24, 0.50),rgba(19, 19, 24, 0.50)), url(./Images/3.png); background-repeat: no-repeat; background-size: cover;">
                     <div class=" lg:max-w-[495px]">
                         <h1 class="mb-5 text-3xl font-extrabold">Teenager Program</h1>
                         <p class="mb-5 font-medium text-base">Our Teen Hockey Development Program is designed to harness their passion for the sport, providing a dynamic platform for skill enhancement, camaraderie, and personal growth.</p>
                         <button class="btn bg-[#FF4240] text-white text-xl font-bold outline-none border-none px-8">Register Now</button>
                       </div>
                 </div>
-                <div class="hero flex justify-start md:col-span-2 bg-cover bg-no-repeat  rounded-2xl px-10 pt-28 pb-12 " style="  background:linear-gradient(180deg,rgba(19, 19, 24, 0.50),rgba(19, 19, 24, 0.50)), url(./Images/4.png); background-repeat: no-repeat; background-size: cover;">
+                <div class="hero flex justify-start md:col-span-2 bg-cover bg-no-repeat  rounded-2xl px-3 pt-12 pb-3 lg:px-10 lg:pt-28 lg:pb-12" style="  background:linear-gradient(180deg,rgba(19, 19, 24, 0.50),rgba(19, 19, 24, 0.50)), url(./Images/4.png); background-repeat: no-repeat; background-size: cover;">
                     <div class="lg:max-w-[495px] ">
                         <h1 class="mb-5 text-3xl font-extrabold">Professional Program</h1>
                         <p class="mb-5 font-medium text-base">we understand that the pursuit of excellence in hockey requires a dedicated and specialized approach. Our Professional Hockey Development Program is tailored for aspiring athletes and established players looking to elevate their game to the highest level.</p>
@@ -384,7 +384,7 @@
                     <img src="./Images/11.png" alt="">
                 </div>
                 <div class=" flex-1">
-                    <div class="collapse collapse-plus border border-t-0 border-x-0 mb-4 rounded-none">
+                    <div class="collapse collapse-plus border border-t-0 border-x-0 mb-2 rounded-none">
                         <input type="radio" name="my-accordion-3" checked="checked" /> 
                         <div class="collapse-title text-xl font-bold">
                             What is Hockey's, and what does it offer?
@@ -393,7 +393,7 @@
                           <p class="text-primary-p">It is a dedicated platform for hockey enthusiasts, providing a centralized hub for news, information, and resources related to the sport. Explore a variety of content, including news articles,</p>
                         </div>
                       </div>
-                    <div class="collapse collapse-plus border border-t-0 border-x-0 mb-4 rounded-none">
+                    <div class="collapse collapse-plus border border-t-0 border-x-0 mb-2 rounded-none">
                         <input type="radio" name="my-accordion-3" /> 
                         <div class="collapse-title text-xl font-bold">
                             How can I stay updated on the latest hockey news and events through your website?
@@ -402,7 +402,7 @@
                           <p class="text-primary-p">To stay informed, regularly check our homepage for the latest news updates. You can also subscribe to our newsletter for timely notifications delivered directly to your inbox.</p>
                         </div>
                       </div>
-                    <div class="collapse collapse-plus border border-t-0 border-x-0 mb-4 rounded-none">
+                    <div class="collapse collapse-plus border border-t-0 border-x-0 mb-2 rounded-none">
                         <input type="radio" name="my-accordion-3" /> 
                         <div class="collapse-title text-xl font-bold">
                             Are there any community features on your website for fans to connect and engage?
@@ -411,7 +411,7 @@
                           <p class="text-primary-p">Yes, we foster a vibrant hockey community! Join our forums to connect with fellow fans, discuss games, share insights, and engage in conversations about all things hockey.</p>
                         </div>
                       </div>
-                    <div class="collapse collapse-plus border border-t-0 border-x-0 mb-4 rounded-none">
+                    <div class="collapse collapse-plus border border-t-0 border-x-0 mb-2 rounded-none">
                         <input type="radio" name="my-accordion-3" /> 
                         <div class="collapse-title text-xl font-bold">
                             Do you offer resources for players, such as training tips and drills?
@@ -420,7 +420,7 @@
                           <p class="text-primary-p">Absolutely! Explore our "Training Center" section for a wealth of resources, including training tips, skill development drills, and advice from experienced coaches to help players enhance their performance on the ice.</p>
                         </div>
                       </div>
-                    <div class="collapse collapse-plus border border-y-0 border-x-0 mb-4 rounded-none">
+                    <div class="collapse collapse-plus border border-y-0 border-x-0 mb-2 rounded-none">
                         <input type="radio" name="my-accordion-3" /> 
                         <div class="collapse-title text-xl font-bold">
                             Can I find information about local hockey events or tournaments on your website?
@@ -475,26 +475,26 @@
                         <div class="flex flex-col lg:flex-row gap-3 lg:gap-6">
                            <div class="flex-1">
                                <label class="block text-xl font-bold " for="name">Your Name</label>
-                               <input class="bg-[#13131808]  w-full my-4 py-4 pl-4 text-primary-p font-normal rounded-xl outline-none " type="text" placeholder="Enter Your Name">
+                               <input class="bg-[#13131808]  w-full my-2 lg:my-4 py-4 pl-4 text-primary-p font-normal rounded-xl outline-none " type="text" placeholder="Enter Your Name">
                            </div>
                            <div class="flex-1">
                                <label  class="block text-xl font-bold" for="email">Your Email</label>
-                               <input class="bg-[#13131808] w-full my-4 py-4 pl-4 text-primary-p font-normal rounded-xl outline-none " type="text" type="email" placeholder="Enter Your Email">
+                               <input class="bg-[#13131808] w-full my-2 lg:my-4 py-4 pl-4 text-primary-p font-normal rounded-xl outline-none " type="text" type="email" placeholder="Enter Your Email">
                            </div>
                         </div>
                         <div class="flex flex-col lg:flex-row gap-3 lg:gap-6">
                            <div class="flex-1" >
                                <label class="block text-xl font-bold" for="name">Subject</label>
-                               <input class="bg-[#13131808] w-full my-4 py-4 pl-4 text-primary-p font-normal rounded-xl outline-none " type="text" type="text" placeholder="Enter Your Subject">
+                               <input class="bg-[#13131808] w-full my-2 lg:my-4 py-4 pl-4 text-primary-p font-normal rounded-xl outline-none " type="text" type="text" placeholder="Enter Your Subject">
                            </div>
                            <div  class="flex-1">
                                <label class="block text-xl font-bold" for="name">Phone Number</label>
-                               <input class="bg-[#13131808] w-full my-4 py-4 pl-4 text-primary-p font-normal rounded-xl outline-none " type="text" type="text" placeholder="Enter Your Phone Number">
+                               <input class="bg-[#13131808] w-full my-2 lg:my-4 py-4 pl-4 text-primary-p font-normal rounded-xl outline-none " type="text" type="text" placeholder="Enter Your Phone Number">
                            </div>
                         </div>
                         <div>
                            <label class="block text-xl font-bold" for="message">Message</label>
-                           <textarea class="bg-[#13131808] w-full my-4 py-4 pl-4 text-primary-p font-normal rounded-xl outline-none " type="text" name="" id="" cols="30" rows="15" placeholder="Write Your Message"></textarea>
+                           <textarea class="bg-[#13131808] w-full my-2 lg:my-4 py-4 pl-4 text-primary-p font-normal rounded-xl outline-none " type="text" name="" id="" cols="30" rows="15" placeholder="Write Your Message"></textarea>
                         </div>
                         
                            <button type="submit" class="text-white bg-primary-color w-full rounded-xl py-3 font-bold text-xl ">Send Message</button>
